@@ -23,7 +23,7 @@
   ],
   "require": {
     "typo3/cms-core": ">=6.2.0,<=9.5.99",
-    "typo3-ter/div2007": ">=1.10.19"
+    "typo3-ter/div2007": ">=1.10.26"
   },
   "autoload": {
     "classmap": [
